--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -78,7 +78,7 @@
 				</div>
 
 				<div class="row advanced-search ml-3">
-					<button type="submit">Search</button>
+					<button class="button-effect" type="submit">Search</button>
 				</div>
 			</div>
 		</form>
