--- a/cards/templates/addcards.html
+++ b/cards/templates/addcards.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="container">
 	<div class="row">
-		<div class="text-center max-width pt-5 pb-5">
-			<h3>Add Cards</h3>
+		<div class="text-center max-width pt-5 pb-4">
+			<h3>Listing Creation Tool</h3>
 		</div>
 	</div>
 	<div class="row">
@@ -12,7 +12,7 @@
 			<form method="POST" enctype="multipart/form-data">
 				{% csrf_token %}
 				{{ form | as_bootstrap }}
-				<button type="submit" class="btn btn-info">Save</button>
+				<button type="submit" class="button-effect">Save</button>
 			</form>
 		</div>
 	</div>
