removed redundant test files and added datatables code to main browse page

--- a/cards/templates/cards.html
+++ b/cards/templates/cards.html
@@ -19,7 +19,7 @@
 <!-- New Table -->
 <div class="container pt-5 pb-5">
 	<div class="table-overflow">
-		<table id="all_cards" class="hover" style="width:100%">
+		<table id="all_cards" class="stripe hover" style="width:100%">
 			<thead class="thead-dark">
 				<tr>
 					<th class="no-sort"></th>
