--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -253,7 +253,7 @@ table.dataTable thead th.sorting_desc {
 
 .card-image-hidden{
     max-height: 270px;
-    position: absolute;
+    position: fixed;
     display: none;
     z-index: 2;
 }
