--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -9,8 +9,8 @@
 		</div>
 	</div>
 	<!---->
-	<div class="row">
-		<div class="col-sm-12 col-md-8">
+	<div class="row justify-content-around">
+		<div class="col-sm-12 col-md-5">
 			<div class="row justify-content-center pb-2">
 				<h4>Cart Summary</h4>
 			</div>
@@ -38,7 +38,7 @@
 			{% endfor %}
 
 		</div>
-		<div class="col-sm-12 col-md-4">
+		<div class="col-sm-12 col-md-5">
         <div class="row justify-content-center pb-2">
 				<h4>Shipping Address</h4>
 			</div>
