--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -597,7 +597,7 @@ textarea.form-control {
     position: relative;
     bottom: 5px;
     display: block;
-    padding-top: 10px;
+    padding-top: 15px;
     }
 
     .center-small{
@@ -616,7 +616,7 @@ textarea.form-control {
     }
 
     #card-title{
-        padding: 5px;
+        padding: 0 2px;
     }
 }
 
@@ -627,8 +627,11 @@ textarea.form-control {
    }
 
    .carousel-image {
-    float: right;
-}
+        float: right;
+    }
+    .camera-icon{
+        padding-top: 10px;
+    }
     
 }
 
