--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -16,7 +16,7 @@
 
 <!--Main Page Background Image-->
 <div class="banner-parent">
-	<img class="w-100" id="cover-image" src="{% static 'img/ikoria_banner_img1.jpg' %}" alt="banner-image">
+	<img class="w-100" id="cover-image" src="{% static 'img/banner-img-1.jpg' %}" alt="banner-image">
 	<div class="banner-child">
 		<h1>Latest Ikoria Product Now Available!</h1>
 	</div>
