--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static from staticfiles %}
 {% block content %}
-<div class="container small-body">
+<div class="container">
 	<!--Page Header-->
 	<div class="row">
 		<div class="text-center max-width pt-5 pb-5">
