--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container small-body">
+<div class="container">
 	<div class="row">
 		<div class="text-center max-width pt-5 pb-4">
 			<h3>This is the login page</h3>
