--- a/accounts/templates/user_profile.html
+++ b/accounts/templates/user_profile.html
@@ -15,18 +15,18 @@
 				<h4 class="col-sm-12 pt-4 pb-4 center">Recent Cards</h4>
 			</div>
 			<div class="row justify-center pb-5 pt-3">
-				<a class="custom-controls carousel-prev" href="#carouselExampleControls" role="button"
+				<a class="custom-controls carousel-prev" href="#user-profile-carousel" role="button"
 					data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="sr-only">Previous</span>
 				</a>
-				<a class="custom-controls carousel-next" href="#carouselExampleControls" role="button"
+				<a class="custom-controls carousel-next" href="#user-profile-carousel" role="button"
 					data-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="sr-only">Next</span>
 				</a>
 			</div>
-			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			<div id="user-profile-carousel" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
 					{% for card in cards|dictsortreversed:"listing_published_date" %}
 					{% if forloop.counter == 1 %}
@@ -37,7 +37,7 @@
                             </div>
 							<div class="col-sm-12 col-md-6 p-5 center-small">
 								<h3>{{ card.card_title }}</h3>
-								<p>Vendor: <a class="underline-link"
+								<p class="border-bottom">Vendor: <a class="underline-link"
 										href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
 								</p>
 								<p class="border-bottom p-1">{{ card.card_description}}</p>
@@ -48,7 +48,7 @@
 								<p class="border-bottom p-1">
 									<span class="boldtext">Price: </span>£{{ card.card_price }}
 								</p>
-								<p class="border-bottom p-1"><span class="boldtext">Listing Published date:</span>
+								<p class="p-1"><span class="boldtext">Listing Published date:</span>
 									{{ card.listing_published_date }}
 								</p>
 								<div class="row pt-2">
