--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="container small-body">
+<div class="container">
 	<div class="row">
 		<div class="text-center max-width pt-5 pb-5">
 			<h3>Advanced Search</h3>
@@ -77,7 +77,7 @@
                     </div>
 				</div>
 
-				<div class="row advanced-search ml-3">
+				<div class="row advanced-search ml-1">
 					<button class="button-effect" type="submit">Search</button>
 				</div>
 			</div>
