--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,9 @@
 							<li class="nav-item">
 								<a class="nav-link" href="{% url 'view_user' %}">My Profile</a>
 							</li>
+                            <li class="nav-item">
+								<a class="nav-link" href="{% url 'view_history' %}">Order History</a>
+							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="{% url 'new_card' %}">Add a new listing</a>
 							</li>
