--- a/accounts/templates/order_history.html
+++ b/accounts/templates/order_history.html
@@ -1,39 +1,93 @@
 {% extends "base.html" %}
 {% block content %}
+
 <div class="container">
 	<div class="row">
 		<div class="text-center max-width pt-5 pb-4">
 			<h3>{{ user.username }}'s order history</h3>
 		</div>
 	</div>
-	{% if orders %}
-	{% for order in orders reversed %}
-	<div class="pb-5">
-		<h5>Order ID #{{order.id}}</h5>
-		<div class="row">
-			<p>Order Date - {{ order.date }}</p>
-		</div>
-		<div class="row">
-			<p>Address - {{ order.street_address1 }}</p>
-		</div>
-		<div class="row">
-			<p>{{ order.street_address2 }}</p>
-		</div>
-		<div class="row">
-			<p>{{ order.town_or_city }}</p>
-		</div>
-		<h5>Items</h5>
-		
-        {% for order_l in order_line %}
-            {% if order_l.order.id == order.id %}
-		    <div class="row">
-			    <p>{{ order_l.quantity }} - {{ order_l.card.card_title }}</p>
-		    </div>
-            {% endif %}
-		{% endfor %}
 
+	{% if orders %}  
+    
+    <div class="p-3 border">
+
+	{% for order in orders reversed %}
+  
+	<div class="pb-5">
+		<div class="border pt-2 pr-2 pb-2 pl-3 order-info-header">
+			<div class="row pb-2">
+
+				<div class="col-sm-12 col-md-4">
+                <div class="row justify-center">
+					<span class="pr-2 pl-2">Order ID #{{order.id}}</span>
+                </div>
+				</div>
+
+				<div class="col-sm-12 col-md-4">
+					<div class="row justify-center">
+						<span class="pr-2 pl-2">Order Placed:</span>
+					</div>
+					<div class="row justify-center">
+						<span class="pr-2 pl-2 pb-4">{{ order.date }}</span>
+					</div>
+				</div>
+
+				<div class="col-sm-12 col-md-4">
+					<div class="row justify-center">
+						<span class="pr-2 pl-2">Dispatch to:</span>
+					</div>
+					<div class="row justify-center">
+						<span class="pr-2 pl-2 pb-4">{{ order.full_name }}</span>
+					</div>
+				</div>
+
+			</div>
+            
+			<div class="row">
+
+				<div class="col-sm-12 col-md-4">
+					<div class="row justify-center">
+						<span class="pr-2 pl-2">Address Line 1</span>
+					</div>
+					<div class="row justify-center">
+						<span class="pr-2 pl-2 pb-4">{{ order.street_address1 }}</span>
+					</div>
+				</div>
+
+				{% if order.street_address2 %}
+				<div class="col-sm-12 col-md-4">
+					<div class="row justify-center">
+						<span class="pr-2 pl-2">Address Line 2</span>
+					</div>
+					<div class="row justify-center">
+						<span class="pr-2 pl-2 pb-4">{{ order.street_address2 }}</span>
+					</div>
+				</div>
+				{% endif %}
+
+				<div class="col-sm-12 col-md-4">
+					<div class="row justify-center">
+						<span class="pr-2 pl-2">Town or City</span>
+					</div>
+					<div class="row justify-center">
+						<span class="pr-2 pl-2 pb-4">{{ order.town_or_city }}</span>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+		{% for order_l in order_line %}
+		{% if order_l.order.id == order.id %}
+		<div class="row justify-center checkout-cards">
+			<span class="pt-2 pl-4 ">{{ order_l.quantity }} x {{ order_l.card.card_title }} - £{{ order_l.card.card_price }} each</span>
+		</div>
+		{% endif %}
+		{% endfor %}
 	</div>
 	{% endfor %}
+    </div>
 	{% else %}
 	<div class="row">
 		<div class="text-center max-width pt-5 pb-4">
