--- a/templates/base.html
+++ b/templates/base.html
@@ -42,26 +42,25 @@
 							<li class="nav-item">
 								<a class="nav-link" href="{% url 'get_cards' %}">Browse</a>
 							</li>
+
 							{% if user.is_authenticated %}
-							<li class="nav-item">
-								<a class="nav-link" href="{% url 'view_user' %}">My Profile</a>
+
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<a class="dropdown-item" href="{% url 'view_user' %}">My Profile</a>
+									<a class="dropdown-item" href="{% url 'new_card' %}">Sell Cards</a>
+                                    <a class="dropdown-item" href="{% url 'view_history' %}">Order History</a>
+                                    <a class="dropdown-item" href="{% url 'view_cart' %}">View Cart
+                                    {% if cards_count > 0 %}
+									    <label>{{ cards.count }}</label>
+									{% endif %}</a>
+									<div class="dropdown-divider"></div>
+									<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+								</div>
 							</li>
-                            <li class="nav-item">
-								<a class="nav-link" href="{% url 'view_history' %}">Order History</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="{% url 'new_card' %}">Add a new listing</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="{% url 'view_cart' %}">View Cart
-									{% if cards_count > 0 %}
-									<label>{{ cards.count }}</label>
-									{% endif %}
-								</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="{% url 'logout' %}">Logout</a>
-							</li>
+
 							{% else %}
 							<li class="nav-item">
 								<a class="nav-link" href="{% url 'login' %}">Login</a>
